// Copyright 2015 The Cockroach Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
// implied. See the License for the specific language governing
// permissions and limitations under the License. See the AUTHORS file
// for names of contributors.
//
// Author: Tamir Duberstein (tamird@gmail.com)

syntax = "proto2";
package cockroach.multiraft;
option go_package = "multiraft";

import "etcd/raft/raftpb/raft.proto";
import "gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;

// RaftMessageRequest is the request used to send raft messages using our
// protobuf-based RPC codec.
message RaftMessageRequest {
  optional uint64 group_id = 1 [(gogoproto.nullable) = false,
      (gogoproto.customname) = "GroupID",
      (gogoproto.casttype) = "github.com/cockroachdb/cockroach/proto.RangeID"];

  optional raftpb.Message message = 2 [(gogoproto.nullable) = false];
}

// RaftMessageResponse is an empty message returned by raft RPCs. If a
// response is needed it will be sent as a separate message.
message RaftMessageResponse {
}
